# onnxconverter-common

./: .gitignore  .lintrunner.toml  README.md  ThirdPartyNotices.txt  azure-pipelines.yml  float16.onnx  manually-publish.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  temp_onnx_fx_test.py  update_ops.py
.azure-pipelines/: OneBranchPipeline-Official.yml  OneBranchPipeline-PullRequest.yml  OneBranchPipeline.yml  linux-conda-CI.yml  main-template.yml  nightly-CI.yml  official.yml  pr.yml  win32-conda-CI.yml
.config/: tsaoptions.json
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/workflows/: codeql-analysis.yml  linux-CI.yml  python-app.yml  windows-CI.yml
onnxconverter_common/: __init__.py  _opt_const_folding.py  auto_float16.py  auto_mixed_precision.py  auto_mixed_precision_model_path.py  bfloat16.py  case_insensitive_dict.py  container.py  data_types.py  decast.py  float16.py  interface.py  metadata_props.py  onnx2py.py  onnx_ex.py  onnx_fx.py  onnx_ops.py  oopb.py  optimizer.py  perfstats.py  pytracing.py  registration.py  shape_calculator.py  test_onnx_fx.py  topology.py  tree_ensemble.py  utils.py
onnxconverter_common/optim/: __init__.py  _onnx_optimisation_common.py  onnx_helper.py  onnx_optimisation.py  onnx_optimisation_identity.py  onnx_optimisation_redundant.py
tests/: test_auto_float16.py  test_auto_mixed_precision.py  test_auto_mixed_precision_model_path.py  test_data_types.py  test_decast.py  test_float16.py  test_onnx.py  test_onnx2py.py  test_onnxfx.py  test_onnxmltools.py  test_oopb.py  test_opt.py  test_pytracing.py  test_skl2onnx_optim_onnx_identity.py  test_skl2onnx_optim_onnx_redundant.py
tests/data/: conv2d_local_func_example.onnx  image_classifier16.onnx  image_classifier32.onnx  test_model_0_no_opt.onnx  test_model_1_no_opt.onnx  test_subgraph.onnx
tests/temp/: temp_after.onnx  temp_before.onnx
